--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "test": "mocha src/route/users/user.spec.js",
-    "start": "node www/bin.js"
+    "start": "node bin/www.js"
   },
   "repository": {
     "type": "git",
