--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "eslint": "^4.14.0",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0"
   },
   "devDependencies": {
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
     "mocha": "^4.0.1",
     "should": "^13.1.3",
     "supertest": "^3.0.0"
